Project slides (cont'd)

--- a/index.Rmd
+++ b/index.Rmd
@@ -27,7 +27,8 @@ require(xtable)
     + Is the temperature rise statistical significant?
 1. Data Exploration
 1. Statistical Inference
-1. Check out my [Shinyapp](https://brigaldies.shinyapps.io/ClimateChange/).
+1. Check out my [Shinyapp](https://brigaldies.shinyapps.io/ClimateChange/)
+1. See the code in [GitHub](https://github.com/brigaldies/ClimateChange)
 
 --- .class #id 
 
@@ -89,10 +90,9 @@ ggplot(sample_data, aes(x = Year, y = AverageTemperatureUncertainty)) +
 
 ## Temperature Increase Hypothesis Testing
 
-Hypothesis H0: The temperature in your city has **NOT** increased.
-T.Test result: Rejected for all cities in the United States.
+**Hypothesis H0**: The temperature in your country has **NOT** increased.
 
-```{r temperature-trend-and-ho-test, echo=FALSE, fig.height = 6, fig.width = 10, fig.align = 'center', warning=FALSE, message=FALSE, error=TRUE} 
+```{r temperature-trend-and-ho-test, echo=FALSE, fig.height = 5, fig.width = 10, fig.align = 'center', warning=FALSE, message=FALSE, error=TRUE} 
 country_data <- data0 %>% filter(Country == country)
 country_data_grouped_by_city <- country_data %>% group_by(City) %>% summarize(MinYear = min(Year), MaxYear = max(Year))
 year_from = 1950
@@ -101,3 +101,5 @@ min_year = max(country_data_grouped_by_city$MinYear)
 max_year = min(country_data_grouped_by_city$MaxYear) 
 trendByCountryAndCity(country_data = country_data, country = country, year_from, year_to, min_year, max_year)
 ```
+
+Example: **T.Test result**: H0 **Rejected** for New York, Chicago, and Los Angeles in the United States for the 1950-2013 period.
